# lumi-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
EngineManaged/: Directory.Build.props  Directory.Build.targets  EngineManaged.sln
EngineManaged/Apps/TestApp/: Program.cs  TestApp.csproj
EngineManaged/Apps/TestApp/Assets/: window.ini
EngineManaged/Libraries/Lumi.Sys/: Window.cs  WindowManager.cs  WindowManagerNative.cs  WindowNative.cs
apps/native/test/: CMakeLists.txt  main.cpp
cmake/: targets.cmake
engine_glue/: CMakeLists.txt
engine_glue/include/sys_c/: export.h  window.h  window_manager.h
engine_glue/include/utils/: c_macros.h
engine_glue/src/: CMakeLists.txt
engine_glue/src/sys_c/: CMakeLists.txt  window.cpp  window_manager.cpp
engine_native/: CMakeLists.txt
engine_native/apps/test/: CMakeLists.txt  main.cpp
engine_native/include/debugging/: logger.h
engine_native/include/gfx/: device.h  render_target.h  renderer.h
engine_native/include/gfx/backends/d3d12/: d3d12_device.h  d3d12_render_target.h  d3d12_renderer.h
engine_native/include/gfx/backends/d3d12/render/: d3d12_render_context.h
engine_native/include/gfx/backends/d3d12/resources/: d3d12_image_buffer.h  d3d12_sync.h
engine_native/include/gfx/backends/d3d12/utils/: d3d12_image_utils.h
engine_native/include/gfx/render/: render_context.h  render_info.h  render_orchestrator.h  render_pass.h  render_view.h
engine_native/include/gfx/resources/: gpu_resource.h  image_buffer.h
engine_native/include/sys/: file_system.h  window.h  window_manager.h
engine_native/src/: CMakeLists.txt
engine_native/src/gfx/: CMakeLists.txt
engine_native/src/gfx/backends/: CMakeLists.txt
engine_native/src/gfx/backends/d3d12/: CMakeLists.txt  d3d12_device.cpp  d3d12_render_target.cpp  d3d12_renderer.cpp
engine_native/src/gfx/backends/d3d12/render/: d3d12_render_context.cpp
engine_native/src/gfx/backends/d3d12/resources/: d3d12_image_buffer.cpp  d3d12_sync.cpp
engine_native/src/gfx/backends/d3d12/utils/: d3d12_image_utils.cpp
engine_native/src/gfx/render/: render_orchestrator.cpp
engine_native/src/sys/: CMakeLists.txt  window.cpp  window_manager.cpp
